Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74116

WebEngineView crashes in destructor if QQmlApplicationEngine is a child of qApp

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.3
    • 5.11.1, 5.11.3, 5.12.1
    • WebEngine
    • None
    • Linux/X11, Windows

    Description

      When setting the parent of QQmlApplicationEngine to the QGuiApplication instance, the application crashes on closing, if a WebEngineView is used in qml.

      This issue can be reproduced by modifying the "quicknanobrowser" example (see attached "quicknanobrowser.diff" file).

      Steps to reproduce:

      • Modify the main.cpp as shown in the diff file.
      • Build and run the application.
      • Close the application.
      • Crash occurs on destroying the QQuickWebEngineView.

      See also the attached stacktrace.

      Attachments

        1. backtrace_win.txt
          2 kB
        2. quicknanobrowser.diff
          0.9 kB
        3. stacktrace_lin.txt
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            michal Michal Klocek
            erwinkandler Erwin Kandler
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes