Fix destruction of qt quick profile after WebEngineContext gets deleted

Issue takes place when QQmlApplicationEngine is a child of qApp.
In case WebEngineContext gets destructed do not try to get default
profile, which is anyway already gone.

Task-number: QTBUG-74116
Change-Id: I24ea87baf677360a420d444b4c964feb722ab317
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>